@@ -10,29 +10,16 @@ import com.gempukku.stccg.game.InvalidGameLogicException;
 import com.gempukku.stccg.game.Player;
 import com.gempukku.stccg.gamestate.GameState;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class PlaceCardOnTopOfDrawDeckAction extends ActionyAction {
 
     private final PhysicalCard _cardBeingPlaced;
-    private final PhysicalCard _causingCard;
 
 
-    public PlaceCardOnTopOfDrawDeckAction(Player performingPlayer, PhysicalCard cardBeingPlaced,
-                                          PhysicalCard causingCard) {
+    public PlaceCardOnTopOfDrawDeckAction(Player performingPlayer, PhysicalCard cardBeingPlaced) {
         super(performingPlayer, ActionType.PLACE_CARD);
         _cardBeingPlaced = cardBeingPlaced;
-        _causingCard = causingCard;
-    }
-
-    @Override
-    public PhysicalCard getActionSource() {
-        return _causingCard;
-    }
-
-    @Override
-    public PhysicalCard getCardForActionSelection() {
-        return _causingCard;
     }
 
     @Override
@@ -43,7 +30,7 @@ public class PlaceCardOnTopOfDrawDeckAction extends ActionyAction {
     @Override
     public Action nextAction(DefaultGame cardGame) throws InvalidGameLogicException {
         GameState gameState = cardGame.getGameState();
-        gameState.removeCardsFromZone(_cardBeingPlaced.getOwnerName(), Arrays.asList(_cardBeingPlaced));
+        gameState.removeCardsFromZone(_cardBeingPlaced.getOwnerName(), List.of(_cardBeingPlaced));
         gameState.sendMessage(_performingPlayerId + " placed " + _cardBeingPlaced + " on top of their draw deck");
         gameState.addCardToZone(_cardBeingPlaced, Zone.DRAW_DECK, EndOfPile.TOP);
         return getNextAction();
